<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RS_CLIENT1.10</string>

    <!-- <string name="input_num_b">input num b</string>

    <string name="input_num_a">input num a</string>

    <string name="output_num_sum">output num sum</string>

    <string name="btn_send_srv">send</string>
 -->    
    <string name="hello_world">Hello world!</string>
    <string name="txtFirst">ViewFlipperFirstLayout</string>
    <string name="txtDesc">NoImage</string>
    <string name="txtSecond">ViewFlipperSecondLayout</string>
    <string name="txtThird">ViewFlipperThirdLayout</string>
    <string name="txtFourth">ViewFlipperFourthLayout</string>
    <string name="Result">RESULT</string>
    <string name="txtSend">SEND</string>
    <string name="descImage">No Image</string>
    <string name="txtUser">UserID:</string>
    <string name="userID">1</string>
    <string name="txtPlace">Destination:</string>
    <string name="placeID">14</string>
    <string name="txtTime">minits Later</string>
    <string name="time">0</string>
    <string name="txtRenew">RENEW</string>
    <!-- <string name="txtFtpIP">FTP_IP:</string>
    <string name="ftpIP">192.168.0.12</string>
    <string name="ftpPASS"/> -->
    <string name="txtADD">1 + 1 = ?</string>
    <string name="txtANS">ANSWER</string>
    <string name="txtApply">Apply</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtSetting">SET</string>
    <string name="titleUID">UserID:</string>
    <string name="titleFTPIP">IPAddress(FTPServer):</string>
    <string name="titleFTPUsrName">FtpUsrName:</string>
    <string name="titleFTPPass">FTPPass:</string>

</resources>
